findbugs cleanup